# databend

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitpod.yml  .licenserc.json  .licenserc.yaml  .mergify.yml  .style.yapf  .typos.toml  .yamllint.yml  1  20260121-cloud-python-udf.md  20260509-conversion-safety-helper.md  20260615-kll-analyze-histogram.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  Cross.toml  LICENSE  Makefile  Makefile.toml  NOTICE.md  README.md  THIRD-PARTY-NOTICES.txt  a  a.sql  a.txt  array_fold.txt  b  blank_pr_readme.md  bors.toml  branch_vacuum_gc_design.md  build.rs  c  clippy.toml  codecov.yml  dddev  (+25 more)
benchmark/: Cargo.toml  README.md  benchmark_cloud.py  benchmark_cloud_load.py  benchmark_local.sh  benchmark_local_merge_into.sh  databend-meta-dependency-optimization-2026-05-14.md  index.jinja  pyproject.toml  update_results.py
benchmark/clickbench/: README.md  benchmark.sh  benchmark_cloud.py  benchmark_cloud.sh  benchmark_local.sh  benchmark_local_merge_into.sh  create_local.sql  index.html  index.jinja  load.sql  run.sh  update-results.sh  update_results.py  wait_tcp.py
benchmark/hits/: clear.sql  create_local.sql  load.sql
benchmark/internal/: asof_left_join_repro.sql  load.sh
benchmark/merge_into/: clear.sql  load.sql  queries.sql
benchmark/tpcds/: README.md  load_data.sh  shell_env.sh  tpcds.sql
benchmark/tpch/: README.md  analyze.sql  clear.sql  create_local.sql  create_table.sh  create_table_native.sh  create_table_s3.sh  gen_data.sh  load_data.sh  prepare_fuse_table.sh  prepare_native_table.sh  prepare_table.sh  shell_env.sh  tpch.sh
benchmark/vector_index_benchmark/: Cargo.toml  result.csv
bindings/nodejs/: .gitignore  .prettierignore  Cargo.toml  README.md  build.rs  cucumber.json  generated.js  index.d.ts  index.js  package.json  tsconfig.json  typedoc.json
bindings/python/: .gitignore  Cargo.toml  Pipfile  README.md  pyproject.toml  test.sh
cli/: Cargo.toml  README.md  build.rs  test.sh
cli/e2e/: e2e.py
cli/src/: args.rs  config.rs  display.rs  error.rs  helper.rs  keywords.txt  lib.rs  main.rs  session.rs  trace.rs  web.rs
cli/tests/: 00-base.result  00-base.sql  01-put.result  01-put.sh  base.result  base.sql  integration_tests.rs
common/aggregate_functions/: Cargo.toml
common/allocators/: Cargo.toml
common/arrow/: Cargo.toml
common/ast/: Cargo.toml
common/base/: Cargo.toml
common/building/: Cargo.toml
common/cache/: Cargo.toml
common/catalog/: Cargo.toml
common/clickhouse-srv/: Cargo.toml  README.md
common/clusters/: Cargo.toml
common/codegen/: Cargo.toml
common/config/: Cargo.toml
common/configs/: Cargo.toml
core/: Cargo.toml  README.md  build.rs
core/src/: auth.rs  client.rs  error.rs  lib.rs  presign.rs  request.rs  response.rs  stage.rs
driver/: Cargo.toml  README.md
driver/src/: conn.rs  error.rs  flight_sql.rs  lib.rs  rest_api.rs  rows.rs  schema.rs  value.rs
kvlocal/: Cargo.toml
kvlocal/src/: lib.rs  local_kv_store.rs  local_kv_store_test.rs
lambda/: Cargo.toml  README.md
lambda/src/: main.rs
macros/: Cargo.toml
macros/src/: from_row.rs  lib.rs  parser.rs
metasrv/: Cargo.toml  build.rs
metasrv/proto/: meta.proto  metasrv.proto
metasrv/src/: errors.rs  export.rs  lib.rs  network.rs  proto.rs  version.rs
query/: Cargo.toml  Cargo.toml.back  README.md  build.rs
query/benches/: bench_main.rs
query/clusters/: Cargo.toml
query/common/: Cargo.toml
query/configs/: Cargo.toml
query/datavalues/: Cargo.toml
query/flight/: Cargo.toml
query/fuzz/: Cargo.toml
query/metrics/: Cargo.toml
query/middle/: Cargo.toml
query/sql/: Cargo.toml
query/src/: auth.rs  config.rs  error.rs  lib.rs  version.rs
query/users/: Cargo.toml
query/wasm/: Cargo.toml  README.md
sql/: Cargo.toml
sql/src/: error.rs  from_row.rs  lib.rs  rows.rs  schema.rs  value.rs
store/: Cargo.toml  README.md  build.rs
store/proto/: store_meta.proto
store/src/: lib.rs
tests/: AGENTS.md  Makefile  README.md  databend-test  datafuse-test  docker-compose.yaml  fuse-test  nested_view_benchmark.sql  pyproject.toml  shell_env.sh
tests/cloud-control-server/: README.md  simple_server.py  task_pb2.py  task_pb2_grpc.py
tests/cloud_control_server/: README.md  notification_pb2.py  notification_pb2_grpc.py  pyproject.toml  resource_pb2.py  resource_pb2_grpc.py  simple_server.py  task_pb2.py  task_pb2_grpc.py  timestamp_pb2.py  udf_env.toml  udf_pb2.py  udf_pb2_grpc.py  utils_pb2.py
tests/compat/: README.md  test-compat.sh  util.sh
tests/compat_fuse/: README.md  test_cases.yaml  test_compat_fuse.py  test_compat_fuse.sh  test_compat_fuse_forward.sh  util.sh
tests/data/: complex.parquet  escape.tsv  field_white_space.tsv  invalid_json.csv  json_sample.ndjson  json_sample1.csv  json_sample2.csv  name_age_two_rowgroups.parquet  nyctaxi.csv  ontime_200.csv  ontime_200.csv.bz2  ontime_200.csv.xz  ontime_200.csv.zst  ontime_200.ndjson  ontime_200.parquet  ontime_200_v1.xml  ontime_200_v2.xml  ontime_200_v3.xml  ontime_400.parquet  sample.csv  sample.sql  sample_2_columns.csv  sample_3_replace.csv  select.csv  ttt.csv  tuple.parquet  wrong_sample.csv  wrong_sample.xml  wrong_sample2.csv  wrong_sample2.ndjson  wrong_sample2.tsv  wrong_xml_sample.xml
tests/framework/: Cargo.toml
tests/fuse-compat/: README.md  test-fuse-compat.sh  test-fuse-forward-compat.sh  util.sh
tests/fuzz/: fuzz.py  readme.md  requirements.txt
tests/helpers/: client.py  native_client.py  uexpect.py
tests/iceberg_data/: readme.md
tests/integration/: Cargo.toml  build.rs  test.tpl
tests/local/: Cargo.toml
tests/logging/: README.md  check_logs.py  check_logs_table.sh  history_table.toml  history_table_external.toml  history_table_meta.toml  test-history-tables.sh  test-logs.sh
tests/logictest/: Dockerfile  README.md  cleanup.py  clickhouse_connector.py  clickhouse_runner.py  complete.py  config.py  gen_suites.py  http_connector.py  http_runner.py  log.py  logictest.py  main.py  mysql_runner.py  regex_type.py  requirements.txt  requiresments.txt  statistics.py
(+28364 files in other folders)
